<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019. Razor Sharp Software Solutions
  ~
  ~ Azel Daniel (816002285)
  ~ Amanda Seenath (816002935)
  ~ Michael Bristol (816003612)
  ~
  ~ INFO 3604
  ~ Project
  ~
  ~ UWI Shuttle Routing and Tracking System
  -->

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:elevation="1dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary">

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                tools:context=".views.ViewShuttlesList"
                app:layout_collapseMode="parallax"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
                android:theme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                android:layout_marginBottom="?attr/actionBarSize">
                <TextView
                    android:id="@+id/toolbarText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_margin="0dp"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:text="@string/view_shuttle"/>
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginTop="-55dp">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp"
            android:focusable="false">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="24dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingBottom="30dp">

                <LinearLayout
                    android:id="@+id/etaLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/eta"
                        android:textSize="14sp"
                        android:fontFamily="@font/raleway"
                        android:textColor="#ccc"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="42dp"
                        android:layout_marginTop="12dp"
                        android:id="@+id/eta"
                        android:fontFamily="@font/raleway"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:text="@string/calculating_time"
                        android:textColor="@android:color/holo_red_light"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/plateNoLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/license_plate"
                        android:textSize="14sp"
                        android:fontFamily="@font/raleway"
                        android:textColor="#ccc"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="42dp"
                        android:layout_marginTop="12dp"
                        android:id="@+id/plateNo"
                        android:fontFamily="@font/raleway"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/capacityLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/max_capacity"
                        android:textSize="14sp"
                        android:fontFamily="@font/raleway"
                        android:textColor="#ccc"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="42dp"
                        android:layout_marginTop="12dp"
                        android:id="@+id/capacity"
                        android:fontFamily="@font/raleway"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/driverLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/driver"
                        android:textSize="14sp"
                        android:fontFamily="@font/raleway"
                        android:textColor="#ccc"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="42dp"
                        android:layout_marginTop="12dp"
                        android:id="@+id/driver"
                        android:fontFamily="@font/raleway"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:text="@string/no_driver"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/routeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/route"
                        android:textSize="14sp"
                        android:fontFamily="@font/raleway"
                        android:textColor="#ccc"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="42dp"
                        android:layout_marginTop="12dp"
                        android:id="@+id/route"
                        android:fontFamily="@font/raleway"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:text="@string/no_route"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>