<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019. Razor Sharp Software Solutions
  ~
  ~ Azel Daniel (816002285)
  ~ Amanda Seenath (816002935)
  ~ Michael Bristol (816003612)
  ~
  ~ INFO 3604
  ~ Project
  ~
  ~ UWI Shuttle Routing and Tracking System
  -->

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:descendantFocusability="beforeDescendants">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:elevation="0dp"
        android:paddingBottom="30dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
            <TextView
                android:id="@+id/toolbarText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_margin="0dp"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:textColor="@android:color/white"
                android:text="@string/view_route"/>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginTop="-30dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="30dp"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:id="@+id/nameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="14sp"
                        android:fontFamily="@font/raleway"
                        android:textColor="#ccc"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="42dp"
                        android:layout_marginTop="12dp"
                        android:id="@+id/name"
                        android:fontFamily="@font/raleway"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_weight="1"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/frequencyLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/frequency"
                        android:textSize="14sp"
                        android:fontFamily="@font/raleway"
                        android:textColor="#ccc"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="42dp"
                        android:layout_marginTop="12dp"
                        android:id="@+id/frequency"
                        android:fontFamily="@font/raleway"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/shuttleCountLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/shuttles"
                        android:textSize="14sp"
                        android:fontFamily="@font/raleway"
                        android:textColor="#ccc"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="42dp"
                        android:layout_marginTop="12dp"
                        android:id="@+id/shuttleCount"
                        android:fontFamily="@font/raleway"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:text="@string/no_on_duty_shuttles"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/stopsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/stops"
                        android:textSize="14sp"
                        android:fontFamily="@font/raleway"
                        android:textColor="#ccc"/>
                    <LinearLayout
                        android:id="@+id/stopsLayoutAdd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="42dp"
                            android:layout_marginTop="12dp"
                            android:id="@+id/stops"
                            android:fontFamily="@font/raleway"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_weight="1"
                            android:text="@string/no_stops"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>